// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0ArtifactHash2C4A1872": Object {
      "Description": "Artifact hash for asset \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3Bucket50047E27": Object {
      "Description": "S3 bucket for asset \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3": Object {
      "Description": "S3 key for asset version \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15ArtifactHash9E00FB24": Object {
      "Description": "Artifact hash for asset \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3Bucket7270718B": Object {
      "Description": "S3 bucket for asset \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE": Object {
      "Description": "S3 key for asset version \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestConfigDFE7B72C": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3Bucket7270718B",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3Bucket50047E27",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2deArtifactHash2AF6C8BC": Object {
      "Description": "Artifact hash for asset \\"92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2de\\"",
      "Type": "String",
    },
    "AssetParameters92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2deS3Bucket1A1B9794": Object {
      "Description": "S3 bucket for asset \\"92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2de\\"",
      "Type": "String",
    },
    "AssetParameters92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2deS3VersionKeyD1737891": Object {
      "Description": "S3 key for asset version \\"92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2de\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0ArtifactHash2C4A1872": Object {
      "Description": "Artifact hash for asset \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3Bucket50047E27": Object {
      "Description": "S3 bucket for asset \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3": Object {
      "Description": "S3 key for asset version \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15ArtifactHash9E00FB24": Object {
      "Description": "Artifact hash for asset \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3Bucket7270718B": Object {
      "Description": "S3 bucket for asset \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE": Object {
      "Description": "S3 key for asset version \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3Bucket7270718B",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3Bucket50047E27",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2deS3Bucket1A1B9794",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2deS3VersionKeyD1737891",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters92bb767e2980540b32ef0d403906d1b57004ab840bbeba0bf32b063c26f7e2deS3VersionKeyD1737891",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"customUserAgent\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5ArtifactHashF818857B": Object {
      "Description": "Artifact hash for asset \\"ca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5\\"",
      "Type": "String",
    },
    "AssetParametersca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5S3BucketF2AC86E8": Object {
      "Description": "S3 bucket for asset \\"ca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5\\"",
      "Type": "String",
    },
    "AssetParametersca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5S3VersionKey665D0BF6": Object {
      "Description": "S3 key for asset version \\"ca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0ArtifactHash2C4A1872": Object {
      "Description": "Artifact hash for asset \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3Bucket50047E27": Object {
      "Description": "S3 bucket for asset \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3": Object {
      "Description": "S3 key for asset version \\"fa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15ArtifactHash9E00FB24": Object {
      "Description": "Artifact hash for asset \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3Bucket7270718B": Object {
      "Description": "S3 bucket for asset \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
    "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE": Object {
      "Description": "S3 key for asset version \\"fa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3Bucket7270718B",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa442a0029fec31281ff48dfa54e767e2e1fd8cf8fd0a4c0581fe881bc0ccb15S3VersionKey99CE44CE",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3Bucket50047E27",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfa19f5fe48b7cc3f3bb4a2fa0647d4810b25adad04d9b0261800bbda8ce401c0S3VersionKeyF56B4EF3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5S3BucketF2AC86E8",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5S3VersionKey665D0BF6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersca0c48616f1d3c52dfe5d78684cdbda31372f0b85d92d64f510c38f89bc62bc5S3VersionKey665D0BF6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"user_agent_extra\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
